# mlx-onecomp

./: .gitignore  LICENSE  README.md  bench_gemma4.py  bench_shard.py  pyproject.toml  quantize_gemma4.py  test_autobit.py  test_blockwise.py  test_lora.py  test_rotation.py
mlx_onecomp/: __init__.py  cli.py  inference.py  lora_trainer.py  quantize.py  quantize_shard.py  runner.py
mlx_onecomp/autobit/: __init__.py  allocator.py  profile.py  solver.py
mlx_onecomp/calibration/: calibration.py
mlx_onecomp/pipeline/: __init__.py  blockwise.py
mlx_onecomp/preprocessing/: __init__.py  rotation.py
mlx_onecomp/quantizer/gptq/: __init__.py  _gptq.py
mlx_onecomp/quantizer/rtn/: __init__.py  _rtn.py
tests/: test_basic.py  test_gptq.py
