[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mlx-onecomp"
version = "0.1.0"
description = "OneCompression ported to Apple MLX - LLM quantization for Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20",
]

[project.optional-dependencies]
lm = ["mlx-lm>=0.19"]
dev = ["pytest"]

[project.scripts]
mlx-onecomp = "mlx_onecomp.cli:main"
